--- a/src/component/ContactPage/Contacts/Contact/Contact.module.css
+++ b/src/component/ContactPage/Contacts/Contact/Contact.module.css
@@ -28,6 +28,8 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: #00ff49;
+  color: white;
+  font-weight: bold;
   margin-right: 10px;
   border-radius: 50%;
 }
