--- a/src/component/ContactPage/ContactDetails/ContactDetails.module.scss
+++ b/src/component/ContactPage/ContactDetails/ContactDetails.module.scss
@@ -1,6 +1,8 @@
 .contactDetails {
-  background: #bdb6b647;
-  padding: 20px;
+  background: #f1f1f1;
+  padding: 30px;
+  width: 35%;
+  word-break: break-word;
   .details-top {
     display: flex;
     flex-flow: column;
@@ -27,13 +29,23 @@
     table {
       margin: auto;
       th {
-        color: lightgrey;
+        color: #a9a4a4;
+        min-width: 150px;
       }
       th,
       td {
-        padding: 15px 30px;
+        padding: 10px 5px;
         text-align: start;
+        vertical-align: top;
       }
     }
+  }
+}
+
+@media (max-width: 1400px) {
+  .contactDetails {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 50px;
   }
 }
