--- a/src/component/ContactPage/ContactPage.module.css
+++ b/src/component/ContactPage/ContactPage.module.css
@@ -15,4 +15,14 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
+@media (max-width: 1400px) {
+  .contactPage .contactPage__Content-bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    grid-gap: 30px;
+  }
+}
 /*# sourceMappingURL=ContactPage.module.css.map */
