--- a/src/component/ContactPage/Contacts/Contact/Contact.module.scss
+++ b/src/component/ContactPage/Contacts/Contact/Contact.module.scss
@@ -13,6 +13,8 @@
       justify-content: center;
       align-items: center;
       background-color: #00ff49;
+      color: white;
+      font-weight: bold;
       margin-right: 10px;
       border-radius: 50%;
     }
