--- a/src/component/ContactPage/Contacts/Contacts.module.css
+++ b/src/component/ContactPage/Contacts/Contacts.module.css
@@ -1,5 +1,4 @@
 .contacts {
-  margin-right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,5 +20,11 @@
 .contacts table thead tr th {
   text-align: start;
   padding: 20px;
+}
+
+@media (max-width: 1400px) {
+  .contacts {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=Contacts.module.css.map */
