--- a/src/component/ContactPage/Contacts/Contacts.module.scss
+++ b/src/component/ContactPage/Contacts/Contacts.module.scss
@@ -1,5 +1,5 @@
 .contacts {
-  margin-right: 50px;
+  // margin-right: 50px;
   display: flex;
   flex-flow: column;
   // min-width: 600px;
@@ -13,5 +13,10 @@
       text-align: start;
       padding: 20px;
     }
+  }
+}
+@media (max-width: 1400px) {
+  .contacts {
+    width: 100%;
   }
 }
