--- a/src/component/Sidebar/Sidebar.module.scss
+++ b/src/component/Sidebar/Sidebar.module.scss
@@ -1,8 +1,8 @@
 .sideBar {
-  width: 70px;
-  height: 100vh;
+  width: 65px;
+  min-height: 100vh;
   text-align: center;
-  background: linear-gradient(#ff5000ba, #fa72aa);
+  background: linear-gradient(180deg, #ff8767, #fe67a3);
   padding: 5px 0;
   .barsIconContainer {
     margin-top: -15px;
