--- a/src/component/Ui/Icon/Icon.module.scss
+++ b/src/component/Ui/Icon/Icon.module.scss
@@ -1,10 +1,19 @@
-.icon-container {
-  padding: 5px;
-  margin: 15px 0;
+.icon-container,
+.btn-container {
+  padding: 15px;
+  transition: all 0.3s ease-out;
+  background-color: inherit;
   cursor: pointer;
   img {
-    width: 20px;
-    height: 20px;
+    width: 30px;
     vertical-align: top;
+    text-align: center;
   }
+}
+.active {
+  border-left: 3px solid white;
+}
+
+.icon-container:hover {
+  background-color: #00000057;
 }
