--- a/src/component/Sidebar/Sidebar.module.css
+++ b/src/component/Sidebar/Sidebar.module.css
@@ -11,4 +11,10 @@
   margin-top: -15px;
   margin-bottom: 60px;
 }
+
+@media (max-width: 768px) {
+  .sideBar {
+    display: none;
+  }
+}
 /*# sourceMappingURL=Sidebar.module.css.map */
