--- a/src/component/ContactDetails/ContactDetails.module.css
+++ b/src/component/ContactDetails/ContactDetails.module.css
@@ -61,9 +61,24 @@
 
 @media (max-width: 1400px) {
   .contactDetails {
-    width: 60%;
+    width: 70%;
     margin: auto;
     margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 992px) {
+  .contactDetails {
+    width: 100%;
+  }
+}
+
+@media (max-width: 420px) {
+  .contactDetails {
+    padding: 15px;
+  }
+  .contactDetails .details-bottom table th {
+    min-width: 100px;
   }
 }
 /*# sourceMappingURL=ContactDetails.module.css.map */
