--- a/src/component/ContactDetails/ContactDetails.module.scss
+++ b/src/component/ContactDetails/ContactDetails.module.scss
@@ -44,8 +44,25 @@
 
 @media (max-width: 1400px) {
   .contactDetails {
-    width: 60%;
+    width: 70%;
     margin: auto;
     margin-bottom: 50px;
+  }
+}
+@media (max-width: 992px) {
+  .contactDetails {
+    width: 100%;
+  }
+}
+@media (max-width: 420px) {
+  .contactDetails {
+    padding: 15px;
+    .details-bottom {
+      table {
+        th {
+          min-width: 100px;
+        }
+      }
+    }
   }
 }
