--- a/src/component/ContactPage/ContactPage.module.css
+++ b/src/component/ContactPage/ContactPage.module.css
@@ -14,6 +14,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 @media (max-width: 1400px) {
@@ -23,6 +26,13 @@
         -ms-flex-direction: column;
             flex-direction: column;
     grid-gap: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  .contactPage .contactPage__Content {
+    width: 100%;
+    padding: 0 20px;
   }
 }
 /*# sourceMappingURL=ContactPage.module.css.map */
