--- a/src/component/ContactPageHeader/ContactPageHeader.module.css
+++ b/src/component/ContactPageHeader/ContactPageHeader.module.css
@@ -10,4 +10,14 @@
   text-align: start;
   margin-left: 15px;
 }
+
+@media (max-width: 992px) {
+  .contactHeader {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 5px;
+    padding-right: 20px;
+  }
+}
 /*# sourceMappingURL=ContactPageHeader.module.css.map */
