--- a/src/component/Contacts/Contacts.module.css
+++ b/src/component/Contacts/Contacts.module.css
@@ -6,6 +6,8 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+  overflow: auto;
+  max-width: calc(100vw - 40px);
   width: 60%;
 }
 
@@ -19,7 +21,7 @@
 
 .contacts table thead tr th {
   text-align: start;
-  padding: 20px;
+  padding: 10px;
 }
 
 @media (max-width: 1400px) {
