--- a/src/component/Ui/GenericModal/GenericModal.module.css
+++ b/src/component/Ui/GenericModal/GenericModal.module.css
@@ -1,1 +1,95 @@
-/* No CSS *//*# sourceMappingURL=GenericModal.module.css.map */
+.Modal {
+  background-color: #e7cfcff2;
+  position: fixed;
+  top: 20%;
+  left: calc(50% - 250px);
+  padding: 20px;
+  width: 100%;
+  margin: auto;
+  max-width: 500px;
+  border-radius: 5px;
+  z-index: 100;
+}
+
+@-webkit-keyframes ModalIn {
+  0% {
+    -webkit-transform: translateY(-30%);
+            transform: translateY(-30%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@keyframes ModalIn {
+  0% {
+    -webkit-transform: translateY(-30%);
+            transform: translateY(-30%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+@-webkit-keyframes ModalOut {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(-30%);
+            transform: translateY(-30%);
+  }
+}
+
+@keyframes ModalOut {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(-30%);
+            transform: translateY(-30%);
+  }
+}
+
+.Modal h1,
+.Modal button {
+  text-align: center;
+}
+
+.Modal .modal_actions {
+  text-align: center;
+}
+
+.Modal .modal_actions button {
+  padding: 10px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 0 5px;
+  color: black;
+}
+
+.Modal .modal_actions .Success {
+  background-color: lightgreen;
+  border: 1px solid green;
+}
+
+.Modal .modal_actions .Danger {
+  background-color: salmon;
+  border: 1px solid red;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  background-color: #8080808f;
+  z-index: 50;
+}
+/*# sourceMappingURL=GenericModal.module.css.map */
