--- a/src/component/Ui/Modal/Modal.module.scss
+++ b/src/component/Ui/Modal/Modal.module.scss
@@ -1,32 +1,18 @@
 .Modal {
   background-color: #e7cfcff2;
   position: fixed;
-  top: 10%;
-  left: calc(50% - 250px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 20px;
-  width: 100%;
+  width: 500px;
   margin: auto;
-  max-width: 500px;
+  max-width: calc(100% - 20px);
   border-radius: 5px;
-  // transform: translateY(-100vh);
   transition: transform 300ms ease-out;
   z-index: 100;
-  // @keyframes ModalIn {
-  //   0% {
-  //     transform: translateY(-30%);
-  //   }
-  //   100% {
-  //     transform: translateY(0%);
-  //   }
-  // }
-  // @keyframes ModalOut {
-  //   0% {
-  //     transform: translateY(0%);
-  //   }
-  //   100% {
-  //     transform: translateY(-30%);
-  //   }
-  // }
+  max-height: calc(100% - 20px);
+  overflow: auto;
   h1,
   button {
     text-align: center;
@@ -56,7 +42,8 @@
   width: 100%;
   left: 0;
   top: 0;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   background-color: #8080808f;
   z-index: 50;
 }
