--- a/src/component/ContactDetails/ContactDetails.module.scss
+++ b/src/component/ContactDetails/ContactDetails.module.scss
@@ -38,6 +38,9 @@
         text-align: start;
         vertical-align: top;
       }
+      tr {
+        border-bottom: 1px solid lightgray;
+      }
     }
   }
 }
