--- a/src/component/ContactPageHeader/ContactPageHeader.module.scss
+++ b/src/component/ContactPageHeader/ContactPageHeader.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   margin: 50px;
   margin-top: 0;
+  p {
+    font-weight: 500;
+    color: gray;
+  }
   .details {
     text-align: start;
     margin-left: 15px;
@@ -12,8 +16,6 @@
     width: 100%;
     margin-left: 0;
     margin-right: 0;
-    // padding: 0 20px;
-    // margin-left: -15px;
     padding-left: 5px;
     padding-right: 20px;
   }
