--- a/src/component/ContactPageSearchBar/ContactPageSearchBar.module.css
+++ b/src/component/ContactPageSearchBar/ContactPageSearchBar.module.css
@@ -17,6 +17,20 @@
   width: 100%;
 }
 
+.searchBar .deleteBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.searchBar .deleteBtn img {
+  height: 21px;
+  margin-right: 5px;
+}
+
 .searchBar button,
 .searchBar .contactsActionBtn {
   padding: 10px;
@@ -27,6 +41,11 @@
   color: white;
   font-weight: bold;
   cursor: pointer;
+}
+
+.searchBar .contactsActionBtn {
+  -webkit-box-shadow: 0 4px 15px 0 #fc686e;
+          box-shadow: 0 4px 15px 0 #fc686e;
 }
 
 .searchBar .searchInputContainer {
