--- a/src/component/Ui/Modal/Modal.module.scss
+++ b/src/component/Ui/Modal/Modal.module.scss
@@ -1,18 +1,41 @@
 .Modal {
   background-color: #e7cfcff2;
   position: fixed;
-  top: 50%;
+  // top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  // transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   padding: 20px;
   width: 500px;
   margin: auto;
   max-width: calc(100% - 20px);
   border-radius: 5px;
-  transition: transform 300ms ease-out;
+  // transition: transform 300ms ease-out;
   z-index: 100;
   max-height: calc(100% - 20px);
   overflow: auto;
+  animation: ModalIn 300ms ease-out forwards;
+  @keyframes ModalIn {
+    0% {
+      // transform: translateY(0%);
+      top: 0;
+    }
+    100% {
+      // transform: translateY(50%);
+      top: 50px;
+    }
+  }
+  @keyframes ModalOut {
+    0% {
+      // transform: translateY(0%);
+      top: 50px;
+    }
+    100% {
+      // transform: translateY(50%);
+      top: 0;
+    }
+  }
   h1,
   button {
     text-align: center;
